--- a/app/src/main/res/layout/activity_menu_items.xml
+++ b/app/src/main/res/layout/activity_menu_items.xml
@@ -7,6 +7,10 @@
     card_view:cardCornerRadius="2dp"
     card_view:cardUseCompatPadding="true" >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -51,12 +55,23 @@
                 android:background="@android:color/darker_gray"
                 />
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvMenuItemPrice"
-                android:text="₹ 100.00"
-                android:layout_marginTop="5dp"/>
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="₹ "
+                    android:layout_marginTop="5dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tvItemPrice"
+                    android:text="100.00"
+                    android:layout_marginTop="5dp"/>
+            </LinearLayout>
 
 
         </LinearLayout>
@@ -64,6 +79,8 @@
 
 
     </LinearLayout>
+
+    </RelativeLayout>
 
    <!-- <RelativeLayout
         android:layout_width="match_parent"
