Addded confirm activity

--- a/app/src/main/res/layout/activity_menu_items.xml
+++ b/app/src/main/res/layout/activity_menu_items.xml
@@ -82,45 +82,10 @@
 
     </RelativeLayout>
 
-   <!-- <RelativeLayout
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp" >
-
-        <TextView
-            android:id="@+id/tvEmailId"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tvName"
-            android:text="email"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-
-        <CheckBox
-            android:id="@+id/chkSelected"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"/>
-
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="name"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/chkSelected"
-            android:layout_toEndOf="@+id/chkSelected" />
-    </RelativeLayout>-->
+        android:layout_height="1px"
+        android:background="@android:color/darker_gray"
+        android:id="@+id/view" />
 
 </android.support.v7.widget.CardView>
