buttons are added

--- a/app/src/main/res/layout/activity_confirm.xml
+++ b/app/src/main/res/layout/activity_confirm.xml
@@ -139,13 +139,47 @@
 
     </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/btnSubmit"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/grey"
+        android:background="@color/colorAccent">
 
-    <Button
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            >
+
+            <ImageView
+                android:layout_width="22sp"
+                android:layout_height="22sp"
+                android:layout_marginRight="5dp"
+                android:src="@mipmap/ic_fancymonk_white"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SUBMIT"
+                android:layout_gravity="center"
+                android:textSize="18sp"
+                android:textColor="#ffff"/>
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
+
+
+   <!-- <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/colorAccent"
         android:text="Submit"
-        android:textColor="#ffff" />
+        android:textColor="#ffff" />-->
 
 </RelativeLayout>
