--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -94,7 +94,41 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/btnDispatch"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            android:textColor="@color/grey"
+            android:background="@color/colorAccent">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                >
+
+                <ImageView
+                    android:layout_width="22sp"
+                    android:layout_height="22sp"
+                    android:layout_marginRight="5dp"
+                    android:src="@mipmap/ic_fancymonk_white"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="DISPATCH"
+                    android:layout_gravity="center"
+                    android:textSize="18sp"
+                    android:textColor="#ffff"/>
+
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
+       <!-- <Button
             android:id="@+id/btnDispatch"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -102,7 +136,7 @@
             android:layout_alignParentBottom="true"
             android:textColor="@color/grey"
             android:background="@color/colorAccent"
-            />
+            />-->
     </RelativeLayout>
 
 
