--- a/app/src/main/res/layout/activity_list_items.xml
+++ b/app/src/main/res/layout/activity_list_items.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:id="@+id/imageView"
         android:layout_height="160dp"
-        android:src="@drawable/download"
+        android:src="@drawable/restaurant"
         android:scaleType="centerCrop"
         />
 
