--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="50dp"
+        android:layout_marginTop="-25dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />
 
@@ -34,8 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:fitsSystemWindows="true"
-                android:background="@drawable/download"
+                android:background="@drawable/restaurant"
                 android:id="@+id/profile_id"
                 app:layout_collapseMode="parallax" />
 
