--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.fancymonk.fancymonk.OrderActivity">
+    tools:context="com.fancymonk.fancymonk.activity.OrderActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewOrder"
