added put extras

--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -6,20 +6,53 @@
     android:layout_height="match_parent"
     tools:context="com.fancymonk.fancymonk.activity.LocationActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarLocation"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary" />
+
     <fragment
         android:id="@+id/googleMap"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_above="@+id/btnReached"
+        android:layout_below="@+id/toolbarLocation"
         />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnReached"
-        android:background="@color/colorAccent"
-        android:text="REACHED"
-        android:textColor="#ffff"
-        android:layout_alignParentBottom="true"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/btnReached"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            android:textColor="@color/grey"
+            android:background="@color/colorAccent">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                >
+
+                <ImageView
+                    android:layout_width="22sp"
+                    android:layout_height="22sp"
+                    android:layout_marginRight="5dp"
+                    android:src="@mipmap/ic_fancymonk_white"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="REACHED"
+                    android:layout_gravity="center"
+                    android:textSize="18sp"
+                    android:textColor="#ffff"/>
+
+            </LinearLayout>
+
+
+        </RelativeLayout>
 
 </RelativeLayout>
